[package]
name = "awasmcli"
version = "0.1.0"
edition = "2021"
description = "A CLI for aWASMlib"
license = "MIT"
repository = "https://github.com/5EUS/aWASMcli"
homepage = "https://github.com/5EUS/aWASMcli"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
awasmlib = { git = "https://github.com/5EUS/aWASMlib" }
# awasmlib = { path = "/Users/zeus/Git/aWASMlib" }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 0

[dev-dependencies]
tempfile = "3"
